Error "optimistic locking failed" i rows duplicades al guardar widget estadístic